--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
       </p>
       <p style="margin-top: 10px; font-size: 0.9rem;">
         📩 Email: <a href="mailto:info@deoyin.com">info@deoyin.com</a><br/>
-        🔗 LinkedIn: <a href="https://www.linkedin.com/company/">Deoyin PX</a> <!-- replace with your actual URL -->
+        🔗 LinkedIn: <a href="https://www.linkedin.com/company/110310768/">Deoyin PX</a> <!-- replace with your actual URL -->
       </p>
     </div>
   </section>
@@ -580,3 +580,4 @@
 </script>
 </body>
 </html>
+
