--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
             <span class="tag">officer</span>
             <span class="tag">flextable</span>
             <span class="tag">Regulatory aware</span>
+            <span class="tag">tidyverse</span>
           </div>
         </div>
 
@@ -580,4 +581,5 @@
 </script>
 </body>
 </html>
+
 
