--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Deoyin PX | Modern PK/PD Analytics & Automation</title>
+  <title>Deoyin PX | Clinical Analytics, PK/PD & Automation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Deoyin PX delivers modern PK/PD analytics, automated reporting, and quantitative pharmacology workflow solutions for pharma and biotech." />
+  <meta name="description" content="Deoyin PX delivers modern PK/PD analytics, CDISC & TLF programming, HEOR/ICER modeling, reporting automation, and AI-assisted clinical analytics for pharma and biotech." />
   <style>
     :root {
       --bg-dark: #050814;
@@ -66,24 +66,6 @@
       align-items: center;
       gap: 10px;
     }
-
-    /* old logo-mark styles kept in case you want a fallback badge someday
-    .logo-mark {
-      width: 32px;
-      height: 32px;
-      border-radius: 999px;
-      background: radial-gradient(circle at 30% 20%, #fbbf24, #b45309);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 18px;
-    }
-
-    .logo-mark span {
-      color: #020617;
-      font-weight: 800;
-    }
-    */
 
     .logo-text {
       display: flex;
@@ -355,6 +337,10 @@
       color: var(--text-muted);
     }
 
+    ul {
+      padding-left: 20px;
+    }
+
     footer {
       border-top: 1px solid #111827;
       background: #020617;
@@ -387,7 +373,7 @@
 
       <div class="logo-text">
         <div class="logo-text-main">DEOYIN PX</div>
-        <div class="logo-text-sub">PK/PD Analytics & Automation</div>
+        <div class="logo-text-sub">Clinical Analytics & Automation</div>
       </div>
     </div>
     <div class="nav-right">
@@ -403,166 +389,197 @@
            alt="Deoyin PX Logo"
            style="height:120px; width:auto; margin-bottom:20px;">
 
-      <div class="hero-eyebrow">PK/PD · Quantitative Pharmacology</div>
+      <div class="hero-eyebrow">PK/PD · CDISC · HEOR · Automation · AI</div>
       <h1 class="hero-title">
-        Accelerating <span class="hero-highlight">PK/PD analytics</span> & report automation for pharma and biotech.
+        Modern <span class="hero-highlight">clinical analytics</span> for PK/PD, CDISC, HEOR, and reporting automation.
       </h1>
       <p class="hero-subtitle">
-        Deoyin PX is a quantitative pharmacology and PK/PD analytics firm specializing in automated workflows, reporting systems, and intelligent data engineering for pharma, biotech, CROs, and clinical research teams.
+        Deoyin PX helps pharma, biotech, and CRO teams move from raw clinical and PK data to validated, submission-ready outputs using R-based analytics, CDISC programming, ICER modeling, and intelligent automation.
       </p>
       <div class="hero-cta-row">
         <a class="btn btn-primary" href="mailto:info@deoyin.com?subject=Deoyin%20PX%20Consultation">
-          Request a PK/PD consultation
+          Request a project consultation
         </a>
         <a class="btn btn-ghost" href="#services">
-          View capabilities
+          View services
         </a>
       </div>
       <div class="hero-meta">
-        <span>• Modern R-based PK workflows</span>
-        <span>• Shiny & API integration</span>
+        <span>• PK/PD analytics & reporting</span>
+        <span>• CDISC (ADaM, TLFs, P21)</span>
+        <span>• HEOR / ICER modeling</span>
+        <span>• Word/Excel & AI automation</span>
       </div>
     </div>
 
     <div class="hero-right-card">
-      <div class="hero-right-title">PK WORKFLOW SNAPSHOT</div>
+      <div class="hero-right-title">CLINICAL ANALYTICS SNAPSHOT</div>
       <div class="metric-row">
-        <div class="metric-label">Manual reporting time</div>
-        <div class="metric-value">5–7 days</div>
+        <div class="metric-label">Manual reporting timelines</div>
+        <div class="metric-value">1–3 weeks</div>
       </div>
       <div class="metric-row">
         <div class="metric-label">With Deoyin PX automation</div>
         <div class="metric-value">Hours → Minutes</div>
       </div>
       <div class="metric-row">
-        <div class="metric-label">Outputs</div>
-        <div class="metric-value">Tables · Plots · Reports</div>
+        <div class="metric-label">Typical outputs</div>
+        <div class="metric-value">PK · TLF · ICER · Reports</div>
       </div>
       <div style="margin-top: 12px; font-size: 0.8rem; color: var(--text-muted);">
-        Typical deliverables:
+        Example deliverables:
       </div>
       <div style="margin-top: 8px;">
         <span class="sample-pill">NCA-ready PK tables</span>
-        <span class="sample-pill">Concentration–time curves</span>
-        <span class="sample-pill">Spider plots</span>
-        <span class="sample-pill">Automated Word/PDF reports</span>
+        <span class="sample-pill">ADaM & TLF packages</span>
+        <span class="sample-pill">Pinnacle 21 validation</span>
+        <span class="sample-pill">ICER & PSA dashboards</span>
+        <span class="sample-pill">Automated Word/Excel reports</span>
       </div>
     </div>
   </div>
 </header>
 
 <main>
+  <!-- Core services / divisions -->
   <section class="section" id="services">
     <div class="section-inner">
       <h2 class="section-title">What We Do</h2>
       <p class="section-sub">
-        We help teams move from raw PK data to validated, submission-ready outputs with reproducible R-based automation and domain-specific PK/PD expertise.
+        Deoyin PX is a focused clinical analytics partner offering five integrated service lines: PK/PD analytics, CDISC & regulatory programming, HEOR/ICER modeling, reporting automation & data engineering, and AI-assisted medical analytics.
       </p>
 
       <div class="grid">
         <div class="card">
-          <h3>PK/PD Analytics</h3>
+          <h3>PK/PD Analytics & Reporting</h3>
           <p>
-            PK summary tables, subject-level and cohort summaries, NCA-ready datasets, LLOQ handling, and IV/PO route detection – all produced via reproducible workflows.
+            From raw concentration data to NCA-ready tables, cohort summaries, and regulatory-aware PK appendices, built on reproducible R pipelines.
           </p>
           <div class="tag-list">
-            <span class="tag">NCA</span>
-            <span class="tag">PK tables</span>
-            <span class="tag">QC pipelines</span>
+            <span class="tag">C<sub>max</sub> / T<sub>max</sub> / AUC</span>
+            <span class="tag">NCA-ready datasets</span>
+            <span class="tag">PK QC</span>
           </div>
         </div>
 
         <div class="card">
-          <h3>PK Visualizations</h3>
+          <h3>CDISC & Regulatory Programming</h3>
           <p>
-            Concentration–time curves, spider plots, EC50/IC50 curves, and comparative graphics using modern ggplot2-based visualization.
+            ADaM dataset programming (ADSL, ADAE, ADTTE), TLF development for interim and CSR work, and Pinnacle 21 validation with issue resolution.
           </p>
           <div class="tag-list">
-            <span class="tag">ggplot2</span>
-            <span class="tag">C–t curves</span>
-            <span class="tag">Exposure–response</span>
+            <span class="tag">ADaM</span>
+            <span class="tag">TLFs</span>
+            <span class="tag">Pinnacle 21</span>
           </div>
         </div>
 
         <div class="card">
-          <h3>Automated Reporting</h3>
+          <h3>HEOR & ICER Modeling</h3>
           <p>
-            Automated generation of Word/PDF PK reports with tables, figures, and structured narrative sections, directly from R.
+            Cost-effectiveness models in R and Excel/VBA, PSA and scenario analyses, and decision dashboards (CEAC, CEAF, tornado plots) for market access teams.
           </p>
           <div class="tag-list">
-            <span class="tag">officer</span>
-            <span class="tag">flextable</span>
-            <span class="tag">Regulatory aware</span>
-            <span class="tag">tidyverse</span>
+            <span class="tag">ICER</span>
+            <span class="tag">PSA</span>
+            <span class="tag">Budget impact</span>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>Automation & Data Engineering</h3>
+          <p>
+            Automated Word/Excel pipelines, ETL workflows for clinical and PK data, and dashboards that collapse repeated manual steps into one-click processes.
+          </p>
+          <div class="tag-list">
+            <span class="tag">R / Python / VBA</span>
+            <span class="tag">ETL</span>
+            <span class="tag">Ops dashboards</span>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>AI-Assisted Medical Analytics</h3>
+          <p>
+            AI-assisted drafting of PK and CSR sections, intelligent summarization of outputs and literature, and clinical analytics copilots embedded in dashboards.
+          </p>
+          <div class="tag-list">
+            <span class="tag">AI narratives</span>
+            <span class="tag">Summarization</span>
+            <span class="tag">Copilots</span>
           </div>
         </div>
 
         <div class="card">
           <h3>Workflow Apps & APIs</h3>
           <p>
-            Shiny apps and Plumber APIs that encapsulate validated PK workflows, enabling internal reuse across multiple studies and teams.
+            Shiny apps and Plumber APIs that encapsulate validated PK/PD, CDISC, or HEOR workflows so internal teams can reuse the same logic across studies.
           </p>
           <div class="tag-list">
             <span class="tag">Shiny</span>
             <span class="tag">Plumber</span>
-            <span class="tag">Athena / AWS</span>
+            <span class="tag">Integration</span>
           </div>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- More detail on process + audience -->
   <section class="section">
     <div class="section-inner two-col">
       <div>
-        <h2 class="section-title">How It Works</h2>
+        <h2 class="section-title">How We Work</h2>
         <p class="section-sub">
-          A streamlined, transparent process designed for pharmacology, biometrics, and clinical teams.
+          A streamlined, transparent process designed for pharmacology, biometrics, HEOR, and clinical operations teams.
         </p>
         <ol>
-          <li><strong>Discovery</strong> – Review study design, PK/PD requirements, and reporting expectations.</li>
-          <li><strong>Data Ingestion & QC</strong> – Ingest PK datasets into a reproducible R pipeline with quality checks.</li>
-          <li><strong>Analytics & Automation</strong> – Generate PK tables, plots, and draft reports using validated scripts.</li>
-          <li><strong>Review & Refinement</strong> – Refine outputs collaboratively and finalize for submission or internal use.</li>
-          <li><strong>Optional Internal Tooling</strong> – Package workflows as Shiny apps or APIs for ongoing reuse.</li>
+          <li><strong>Discovery</strong> – Clarify study design, deliverables (PK, TLFs, ICER, automation), and timelines.</li>
+          <li><strong>Data Ingestion & QC</strong> – Ingest PK, clinical, or cost data into a reproducible R/Python pipeline with structured quality checks.</li>
+          <li><strong>Analytics & Programming</strong> – Build PK outputs, ADaM datasets, TLFs, ICER models, or automated reports using validated scripts.</li>
+          <li><strong>Review & Refinement</strong> – Iterate with your team to align tables, figures, and models with internal standards and regulatory expectations.</li>
+          <li><strong>Optional Internal Tooling</strong> – Package workflows as Shiny apps, APIs, or automation scripts for reuse across future studies.</li>
         </ol>
       </div>
       <div>
         <h2 class="section-title">Who We Serve</h2>
         <p class="section-sub">
-          Deoyin PX partners with teams across the drug-development ecosystem.
+          Deoyin PX partners with organizations across the drug-development and evidence-generation ecosystem.
         </p>
-        <ul style="padding-left: 20px; font-size: 0.87rem; color: var(--text-muted);">
-          <li><strong>Pharma & biotech</strong> – PK/PD workflows across preclinical and clinical phases.</li>
-          <li><strong>CROs</strong> – Overflow analytics and automation of repeatable PK reporting tasks.</li>
-          <li><strong>Clinical research units & academic labs</strong> – Reproducible PK analyses and visualizations.</li>
-          <li><strong>Data & biometrics teams</strong> – Integration of PK analytics into broader data ecosystems.</li>
+        <ul style="font-size: 0.87rem; color: var(--text-muted);">
+          <li><strong>Pharma & biotech</strong> – PK/PD, CDISC, HEOR, and automation support from early phase through submission.</li>
+          <li><strong>CROs</strong> – Overflow programming and automation of repeatable PK, TLF, and reporting work.</li>
+          <li><strong>Market access & HEOR teams</strong> – ICER and budget impact models with reproducible code and Excel front-ends.</li>
+          <li><strong>Clinical & academic units</strong> – Reproducible PK analyses, visualizations, and reporting pipelines.</li>
+          <li><strong>Biometrics & data science teams</strong> – Integration of analytics workflows into broader data ecosystems and infrastructure.</li>
         </ul>
       </div>
     </div>
   </section>
 
+  <!-- About -->
   <section class="section">
     <div class="section-inner">
       <h2 class="section-title">About Deoyin PX</h2>
       <p class="section-sub">
-        Deoyin PX is a PK/PD analytics and workflow-automation brand under <strong>Deoyin and Company LLC</strong>, focused on modernizing pharmacokinetic workflows through R-based analytics, Shiny applications, automated reporting, and intelligent data engineering.
+        Deoyin PX is a clinical analytics and workflow-automation brand under <strong>Deoyin and Company LLC</strong>, focused on modernizing pharmacokinetic, regulatory, and health economics workflows through R-based analytics, Shiny applications, automated reporting, and intelligent data engineering.
       </p>
       <p style="font-size: 0.88rem; color: var(--text-muted); margin-top: 10px;">
-        Our mission is to simplify PK workflows, accelerate drug-development timelines, and elevate the quality of pharmacokinetic insights across global teams.
+        Our mission is to simplify complex analytical workflows, shorten timelines to insight and submission, and elevate the quality and reproducibility of clinical evidence across global teams.
       </p>
     </div>
   </section>
 
+  <!-- Contact -->
   <section class="section" id="contact">
     <div class="section-inner">
       <h2 class="section-title">Contact</h2>
       <p class="section-sub">
-        For collaboration or project inquiries, reach out directly.
+        For collaboration, scoping a specific study, or discussing automation opportunities, reach out directly.
       </p>
       <p style="margin-top: 10px; font-size: 0.9rem;">
         📩 Email: <a href="mailto:info@deoyin.com">info@deoyin.com</a><br/>
-        🔗 LinkedIn: <a href="https://www.linkedin.com/company/110310768/">Deoyin PX</a> <!-- replace with your actual URL -->
+        🔗 LinkedIn: <a href="https://www.linkedin.com/company/110310768/">Deoyin PX</a> <!-- replace with your actual URL if it changes -->
       </p>
     </div>
   </section>
@@ -571,7 +588,7 @@
 <footer>
   <div class="footer-inner">
     <span>© <span id="year"></span> Deoyin PX · A Deoyin and Company LLC Brand.</span>
-    <span style="font-size: 0.78rem;">PK/PD Analytics · Automation · Quantitative Pharmacology</span>
+    <span style="font-size: 0.78rem;">PK/PD · CDISC · HEOR · Automation · AI-assisted Analytics</span>
   </div>
 </footer>
 
@@ -581,5 +598,3 @@
 </script>
 </body>
 </html>
-
-
