--- a/index.html
+++ b/index.html
@@ -358,86 +358,59 @@
       gap: 10px;
       align-items: center;
     }
+
+    .nav-center {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.nav-center .nav-link {
+  font-size: 0.85rem;
+  padding: 8px 12px;
+  border-radius: 999px;
+  color: var(--text-main);
+  border: 1px solid rgba(148, 163, 184, 0.25);
+  transition: background 0.2s, border-color 0.2s;
+}
+
+.nav-center .nav-link:hover {
+  background: rgba(148, 163, 184, 0.15);
+  border-color: rgba(148, 163, 184, 0.5);
+}
   </style>
 </head>
 <body>
 <div class="page">
 
 <header>
-  <div class="nav">
-    <div class="nav-left">
-      <!-- Navbar logo -->
-      <img src="img/deoyin-px-logo.png"
-           alt="Deoyin PX Logo"
-           style="height:48px; width:auto; margin-right:10px;">
+<div class="nav">
+  <div class="nav-left">
+    <img src="img/deoyin-px-logo.png"
+         alt="Deoyin PX Logo"
+         style="height:48px; width:auto; margin-right:10px;">
 
-      <div class="logo-text">
-        <div class="logo-text-main">DEOYIN PX</div>
-        <div class="logo-text-sub">Clinical Analytics & Automation</div>
-      </div>
-    </div>
-    <div class="nav-right">
-      <div class="nav-chip">A Deoyin and Company LLC Brand</div>
-      <a class="nav-link" href="mailto:info@deoyin.com?subject=Deoyin%20PX%20Inquiry">Contact</a>
+    <div class="logo-text">
+      <div class="logo-text-main">DEOYIN PX</div>
+      <div class="logo-text-sub">Clinical Analytics & Automation</div>
     </div>
   </div>
 
-  <div class="hero">
-    <div>
-      <!-- Hero logo -->
-      <img src="img/deoyin-px-logo.png"
-           alt="Deoyin PX Logo"
-           style="height:120px; width:auto; margin-bottom:20px;">
-
-      <div class="hero-eyebrow">PK/PD · CDISC · HEOR · Automation · AI</div>
-      <h1 class="hero-title">
-        Modern <span class="hero-highlight">clinical analytics</span> for PK/PD, CDISC, HEOR, and reporting automation.
-      </h1>
-      <p class="hero-subtitle">
-        Deoyin PX helps pharma, biotech, and CRO teams move from raw clinical and PK data to validated, submission-ready outputs using R-based analytics, CDISC programming, ICER modeling, and intelligent automation.
-      </p>
-      <div class="hero-cta-row">
-        <a class="btn btn-primary" href="mailto:info@deoyin.com?subject=Deoyin%20PX%20Consultation">
-          Request a project consultation
-        </a>
-        <a class="btn btn-ghost" href="#services">
-          View services
-        </a>
-      </div>
-      <div class="hero-meta">
-        <span>• PK/PD analytics & reporting</span>
-        <span>• CDISC (ADaM, TLFs, P21)</span>
-        <span>• HEOR / ICER modeling</span>
-        <span>• Word/Excel & AI automation</span>
-      </div>
-    </div>
-
-    <div class="hero-right-card">
-      <div class="hero-right-title">CLINICAL ANALYTICS SNAPSHOT</div>
-      <div class="metric-row">
-        <div class="metric-label">Manual reporting timelines</div>
-        <div class="metric-value">1–3 weeks</div>
-      </div>
-      <div class="metric-row">
-        <div class="metric-label">With Deoyin PX automation</div>
-        <div class="metric-value">Hours → Minutes</div>
-      </div>
-      <div class="metric-row">
-        <div class="metric-label">Typical outputs</div>
-        <div class="metric-value">PK · TLF · ICER · Reports</div>
-      </div>
-      <div style="margin-top: 12px; font-size: 0.8rem; color: var(--text-muted);">
-        Example deliverables:
-      </div>
-      <div style="margin-top: 8px;">
-        <span class="sample-pill">NCA-ready PK tables</span>
-        <span class="sample-pill">ADaM & TLF packages</span>
-        <span class="sample-pill">Pinnacle 21 validation</span>
-        <span class="sample-pill">ICER & PSA dashboards</span>
-        <span class="sample-pill">Automated Word/Excel reports</span>
-      </div>
-    </div>
+  <div class="nav-center">
+    <a class="nav-link" href="index.html">Home</a>
+    <a class="nav-link" href="about.html">About Us</a>
+    <a class="nav-link" href="services.html">Products & Services</a>
+    <a class="nav-link" href="insights.html">Insights</a>
   </div>
+
+  <div class="nav-right">
+    <a class="btn btn-primary" 
+       href="mailto:info@deoyin.com?subject=Deoyin%20PX%20Consultation"
+       style="padding: 6px 16px; font-size: 0.82rem;">
+      Get Consultation
+    </a>
+  </div>
+</div>
 </header>
 
 <main>
