--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     header {
       background: var(--bg-hero-grad);
       border-bottom: 1px solid #111827;
+      position: sticky;
+      top: 0;
+      z-index: 20;
     }
 
     .nav {
@@ -84,6 +87,34 @@
       color: var(--text-muted);
     }
 
+    .nav-center {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .nav-center .nav-link {
+      font-size: 0.85rem;
+      padding: 8px 12px;
+      border-radius: 999px;
+      color: var(--text-main);
+      border: 1px solid rgba(148, 163, 184, 0.25);
+      transition: background 0.2s, border-color 0.2s;
+      text-decoration: none;
+    }
+
+    .nav-center .nav-link:hover {
+      background: rgba(148, 163, 184, 0.15);
+      border-color: rgba(148, 163, 184, 0.5);
+    }
+
+    .nav-center .nav-link.active {
+      background: var(--accent-soft);
+      border-color: var(--accent);
+      color: var(--accent);
+      font-weight: 600;
+    }
+
     .nav-right {
       display: flex;
       align-items: center;
@@ -91,19 +122,33 @@
       font-size: 0.85rem;
     }
 
-    .nav-chip {
-      padding: 6px 10px;
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      padding: 10px 20px;
       border-radius: 999px;
-      background: var(--chip-bg);
-      color: var(--text-muted);
-      border: 1px solid #1f2937;
+      font-size: 0.9rem;
+      border: 1px solid transparent;
+      cursor: pointer;
+      text-decoration: none;
     }
 
-    .nav-link {
-      padding: 8px 12px;
-      border-radius: 999px;
-      border: 1px solid rgba(148, 163, 184, 0.4);
-      font-size: 0.8rem;
+    .btn-primary {
+      background: var(--accent);
+      border-color: var(--accent);
+      color: #020617;
+      font-weight: 600;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.4);
+    }
+
+    .btn-primary:hover {
+      filter: brightness(1.05);
+    }
+
+    .btn-ghost {
+      background: transparent;
+      border-color: rgba(148, 163, 184, 0.5);
       color: var(--text-main);
     }
 
@@ -120,6 +165,15 @@
     @media (max-width: 900px) {
       .hero {
         grid-template-columns: minmax(0, 1fr);
+      }
+      .nav {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+      .nav-center {
+        order: 3;
+        flex-wrap: wrap;
+        justify-content: center;
       }
     }
 
@@ -158,35 +212,6 @@
       flex-wrap: wrap;
       gap: 14px;
       margin-top: 22px;
-    }
-
-    .btn {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      padding: 10px 20px;
-      border-radius: 999px;
-      font-size: 0.9rem;
-      border: 1px solid transparent;
-      cursor: pointer;
-    }
-
-    .btn-primary {
-      background: var(--accent);
-      border-color: var(--accent);
-      color: #020617;
-      font-weight: 600;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.4);
-    }
-
-    .btn-primary:hover {
-      filter: brightness(1.05);
-    }
-
-    .btn-ghost {
-      background: transparent;
-      border-color: rgba(148, 163, 184, 0.5);
-      color: var(--text-main);
     }
 
     .hero-meta {
@@ -358,63 +383,95 @@
       gap: 10px;
       align-items: center;
     }
-
-    .nav-center {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
-.nav-center .nav-link {
-  font-size: 0.85rem;
-  padding: 8px 12px;
-  border-radius: 999px;
-  color: var(--text-main);
-  border: 1px solid rgba(148, 163, 184, 0.25);
-  transition: background 0.2s, border-color 0.2s;
-}
-
-.nav-center .nav-link:hover {
-  background: rgba(148, 163, 184, 0.15);
-  border-color: rgba(148, 163, 184, 0.5);
-}
   </style>
 </head>
 <body>
 <div class="page">
 
 <header>
-<div class="nav">
-  <div class="nav-left">
-    <img src="img/deoyin-px-logo.png"
-         alt="Deoyin PX Logo"
-         style="height:48px; width:auto; margin-right:10px;">
+  <div class="nav">
+    <div class="nav-left">
+      <img src="img/deoyin-px-logo.png"
+           alt="Deoyin PX Logo"
+           style="height:48px; width:auto; margin-right:10px;">
+      <div class="logo-text">
+        <div class="logo-text-main">DEOYIN PX</div>
+        <div class="logo-text-sub">Clinical Analytics & Automation</div>
+      </div>
+    </div>
 
-    <div class="logo-text">
-      <div class="logo-text-main">DEOYIN PX</div>
-      <div class="logo-text-sub">Clinical Analytics & Automation</div>
+    <div class="nav-center">
+      <a class="nav-link active" href="index.html">Home</a>
+      <a class="nav-link" href="about.html">About Us</a>
+      <a class="nav-link" href="services.html">Products & Services</a>
+      <a class="nav-link" href="insights.html">Insights</a>
+    </div>
+
+    <div class="nav-right">
+      <a class="btn btn-primary" href="consultation.html">
+        Get Consultation
+      </a>
     </div>
   </div>
 
-  <div class="nav-center">
-    <a class="nav-link" href="index.html">Home</a>
-    <a class="nav-link" href="about.html">About Us</a>
-    <a class="nav-link" href="services.html">Products & Services</a>
-    <a class="nav-link" href="insights.html">Insights</a>
-  </div>
+  <div class="hero">
+    <div>
+      <img src="img/deoyin-px-logo.png"
+           alt="Deoyin PX Logo"
+           style="height:120px; width:auto; margin-bottom:20px;">
 
-  <div class="nav-right">
-    <a class="btn btn-primary" 
-       href="mailto:info@deoyin.com?subject=Deoyin%20PX%20Consultation"
-       style="padding: 6px 16px; font-size: 0.82rem;">
-      Get Consultation
-    </a>
+      <div class="hero-eyebrow">PK/PD · CDISC · HEOR · Automation · AI</div>
+      <h1 class="hero-title">
+        Modern <span class="hero-highlight">clinical analytics</span> for PK/PD, CDISC, HEOR, and reporting automation.
+      </h1>
+      <p class="hero-subtitle">
+        Deoyin PX helps pharma, biotech, and CRO teams move from raw clinical and PK data to validated, submission-ready outputs using R-based analytics, CDISC programming, ICER modeling, and intelligent automation.
+      </p>
+      <div class="hero-cta-row">
+        <a class="btn btn-primary" href="consultation.html">
+          Request a project consultation
+        </a>
+        <a class="btn btn-ghost" href="#services">
+          View services
+        </a>
+      </div>
+      <div class="hero-meta">
+        <span>• PK/PD analytics & reporting</span>
+        <span>• CDISC (ADaM, TLFs, P21)</span>
+        <span>• HEOR / ICER modeling</span>
+        <span>• Word/Excel & AI automation</span>
+      </div>
+    </div>
+
+    <div class="hero-right-card">
+      <div class="hero-right-title">CLINICAL ANALYTICS SNAPSHOT</div>
+      <div class="metric-row">
+        <div class="metric-label">Manual reporting timelines</div>
+        <div class="metric-value">1–3 weeks</div>
+      </div>
+      <div class="metric-row">
+        <div class="metric-label">With Deoyin PX automation</div>
+        <div class="metric-value">Hours → Minutes</div>
+      </div>
+      <div class="metric-row">
+        <div class="metric-label">Typical outputs</div>
+        <div class="metric-value">PK · TLF · ICER · Reports</div>
+      </div>
+      <div style="margin-top: 12px; font-size: 0.8rem; color: var(--text-muted);">
+        Example deliverables:
+      </div>
+      <div style="margin-top: 8px;">
+        <span class="sample-pill">NCA-ready PK tables</span>
+        <span class="sample-pill">ADaM & TLF packages</span>
+        <span class="sample-pill">Pinnacle 21 validation</span>
+        <span class="sample-pill">ICER & PSA dashboards</span>
+        <span class="sample-pill">Automated Word/Excel reports</span>
+      </div>
+    </div>
   </div>
-</div>
 </header>
 
 <main>
-  <!-- Core services / divisions -->
   <section class="section" id="services">
     <div class="section-inner">
       <h2 class="section-title">What We Do</h2>
@@ -498,7 +555,6 @@
     </div>
   </section>
 
-  <!-- More detail on process + audience -->
   <section class="section">
     <div class="section-inner two-col">
       <div>
@@ -530,20 +586,6 @@
     </div>
   </section>
 
-  <!-- About -->
-  <section class="section">
-    <div class="section-inner">
-      <h2 class="section-title">About Deoyin PX</h2>
-      <p class="section-sub">
-        Deoyin PX is a clinical analytics and workflow-automation brand under <strong>Deoyin and Company LLC</strong>, focused on modernizing pharmacokinetic, regulatory, and health economics workflows through R-based analytics, Shiny applications, automated reporting, and intelligent data engineering.
-      </p>
-      <p style="font-size: 0.88rem; color: var(--text-muted); margin-top: 10px;">
-        Our mission is to simplify complex analytical workflows, shorten timelines to insight and submission, and elevate the quality and reproducibility of clinical evidence across global teams.
-      </p>
-    </div>
-  </section>
-
-  <!-- Contact -->
   <section class="section" id="contact">
     <div class="section-inner">
       <h2 class="section-title">Contact</h2>
@@ -552,7 +594,7 @@
       </p>
       <p style="margin-top: 10px; font-size: 0.9rem;">
         📩 Email: <a href="mailto:info@deoyin.com">info@deoyin.com</a><br/>
-        🔗 LinkedIn: <a href="https://www.linkedin.com/company/110310768/">Deoyin PX</a> <!-- replace with your actual URL if it changes -->
+        🔗 LinkedIn: <a href="https://www.linkedin.com/company/110310768/">Deoyin PX</a>
       </p>
     </div>
   </section>
