--- a/about.html
+++ b/about.html
@@ -290,14 +290,14 @@
           We exist to simplify complex analytical workflows, shorten timelines to insight and submission, and elevate the quality and reproducibility of clinical evidence.
         </p>
         <p style="font-size:0.9rem; color:var(--text-muted); margin-top:10px;">
-          Many PK/PD, CDISC, and HEOR workflows remain heavily manual—spread across ad-hoc scripts, spreadsheets, and slide decks. Deoyin PX helps teams consolidate this into validated, reproducible pipelines that create the same high-quality outputs every single time.
+          Many PK/PD, CDISC, and HEOR workflows remain heavily manual-spread across ad-hoc scripts, spreadsheets, and slide decks. Deoyin PX helps teams consolidate this into validated, reproducible pipelines that create the same high-quality outputs every single time.
         </p>
       </div>
 
       <div class="card">
         <h3>What makes Deoyin PX different?</h3>
         <ul>
-          <li>Deep focus on <strong>PK/PD</strong>, <strong>CDISC</strong>, and <strong>HEOR/ICER</strong>—not generic analytics.</li>
+          <li>Deep focus on <strong>PK/PD</strong>, <strong>CDISC</strong>, and <strong>HEOR/ICER</strong>-not generic analytics.</li>
           <li>Preference for <strong>reusable code and apps</strong> over one-off scripts.</li>
           <li>Hands-on experience with <strong>R, Shiny, Python, VBA, and ETL</strong> for clinical data.</li>
           <li>Orientation toward <strong>regulatory expectations</strong> and fit-for-submission outputs.</li>
@@ -348,7 +348,7 @@
       <div>
         <h2 class="section-title">How We Collaborate</h2>
         <p class="section-sub">
-          Deoyin PX works as an extension of your internal teams—fitting into existing governance, quality, and documentation structures.
+          Deoyin PX works as an extension of your internal teams-fitting into existing governance, quality, and documentation structures.
         </p>
         <ul style="font-size:0.9rem; color:var(--text-muted); margin-top:10px;">
           <li>Project-based engagements for specific studies or work packages.</li>
