--- a/services.html
+++ b/services.html
@@ -270,7 +270,7 @@
   <section class="section">
     <div class="section-inner">
       <div class="page-eyebrow">Services</div>
-      <h1 class="page-title">PK/PD, CDISC, HEOR & automation—packaged as real deliverables.</h1>
+      <h1 class="page-title">PK/PD, CDISC, HEOR & automation-packaged as real deliverables.</h1>
       <p class="page-subtitle">
         Deoyin PX provides project-ready service packages. Each engagement is scoped with clear inputs, outputs, and timelines, using reproducible code and validated workflows.
       </p>
