--- a/insights.html
+++ b/insights.html
@@ -284,7 +284,7 @@
       <div class="page-eyebrow">Insights</div>
       <h1 class="page-title">Short, practical notes on modern clinical analytics.</h1>
       <p class="page-subtitle">
-        Deoyin PX Insights highlight small, actionable ideas around PK/PD automation, CDISC workflows, HEOR/ICER modeling, and AI-assisted reporting—built for busy biometrics and clinical teams.
+        Deoyin PX Insights highlight small, actionable ideas around PK/PD automation, CDISC workflows, HEOR/ICER modeling, and AI-assisted reporting-built for busy biometrics and clinical teams.
       </p>
 
       <div class="filters">
