--- a/thank-you.html
+++ b/thank-you.html
@@ -178,7 +178,7 @@
       </p>
       <p class="thank-meta">
         In the meantime, you can explore our PK/PD, CDISC, HEOR, and automation services
-        to see how Deoyin PX supports clinical, biometrics, and market access teams.
+        to see how Deoyin PX supports clinical, pharmacometrics, and market access teams.
       </p>
       <div class="btn-row">
         <a href="index.html" class="btn btn-primary">Back to homepage</a>
