--- a/index.html
+++ b/index.html
@@ -63,73 +63,87 @@
       z-index: 20;
     }
 
-    .nav {
-      max-width: 1120px;
-      margin: 0 auto;
-      padding: 16px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 16px;
-    }
+.nav {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 16px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+}
 
-    .nav-left {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
+.nav-left {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 
-    .logo-text {
-      display: flex;
-      flex-direction: column;
-    }
+.logo-text {
+  display: flex;
+  flex-direction: column;
+}
 
-    .logo-text-main {
-      font-weight: 600;
-      letter-spacing: 0.08em;
-      font-size: 0.9rem;
-      text-transform: uppercase;
-    }
+.logo-text-main {
+  font-weight: 600;
+  letter-spacing: 0.08em;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+}
 
-    .logo-text-sub {
-      font-size: 0.7rem;
-      color: var(--text-muted);
-    }
+.logo-text-sub {
+  font-size: 0.7rem;
+  color: var(--text-muted);
+}
 
-    .nav-center {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
+/* NEW: center nav links */
+.nav-center {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 0.82rem;
+}
 
-    .nav-center .nav-link {
-      font-size: 0.85rem;
-      padding: 8px 12px;
-      border-radius: 999px;
-      color: var(--text-main);
-      border: 1px solid rgba(148, 163, 184, 0.25);
-      transition: background 0.2s, border-color 0.2s;
-      text-decoration: none;
-    }
+    /* Right side (chip + button) */
+.nav-right {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 0.85rem;
+}
+/* --- NAV LINKS --- */
 
-    .nav-center .nav-link:hover {
-      background: rgba(148, 163, 184, 0.15);
-      border-color: rgba(148, 163, 184, 0.5);
-    }
+.nav-link {
+  padding: 7px 12px;
+  border-radius: 999px;
+  border: 1px solid rgba(148, 163, 184, 0.4);
+  font-size: 0.8rem;
+  color: var(--text-main);
+  text-decoration: none;
+  background: transparent;
+  transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
+}
 
-    .nav-center .nav-link.active {
-      background: var(--accent-soft);
-      border-color: var(--accent);
-      color: var(--accent);
-      font-weight: 600;
-    }
+.nav-link:hover {
+  background: rgba(15, 23, 42, 0.9);
+  border-color: rgba(148, 163, 184, 0.8);
+}
 
-    .nav-right {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 0.85rem;
-    }
+/* Active page link */
+.nav-link.nav-active {
+  background: var(--accent-soft);
+  border-color: var(--accent);
+  color: var(--accent);
+}
+
+/* “A Deoyin and Company LLC Brand” chip – keep or adapt */
+.nav-chip {
+  padding: 6px 10px;
+  border-radius: 999px;
+  background: var(--chip-bg);
+  color: var(--text-muted);
+  border: 1px solid #1f2937;
+}
 
     .btn {
       display: inline-flex;
@@ -400,87 +414,57 @@
 
 <header>
   <div class="nav">
+    <!-- LEFT: Logo -->
     <div class="nav-left">
-      <img src="img/deoyin-px-logo.png"
+      <img src="/img/deoyin-px-logo.png"
            alt="Deoyin PX Logo"
-           style="height:48px; width:auto; margin-right:10px;">
+           style="height:40px; width:auto; margin-right:10px;">
       <div class="logo-text">
         <div class="logo-text-main">DEOYIN PX</div>
         <div class="logo-text-sub">Clinical Analytics & Automation</div>
       </div>
     </div>
 
-    <div class="nav-center">
-      <a class="nav-link active" href="index.html">Home</a>
-      <a class="nav-link" href="about.html">About Us</a>
-      <a class="nav-link" href="services.html">Products & Services</a>
-      <a class="nav-link" href="insights.html">Insights</a>
-    </div>
+    <!-- CENTER: Main navigation -->
+    <nav class="nav-center">
+      <!-- On EACH page, set nav-active on the relevant link -->
 
+      <!-- Home -->
+      <a href="/"
+         class="nav-link <!--HOME_ACTIVE-->">
+        Home
+      </a>
+
+      <!-- About Us -->
+      <a href="/about/"
+         class="nav-link <!--ABOUT_ACTIVE-->">
+        About Us
+      </a>
+
+      <!-- Products / Services -->
+      <a href="/services/"
+         class="nav-link <!--SERVICES_ACTIVE-->">
+        Products &amp; Services
+      </a>
+
+      <!-- Insights -->
+      <a href="/insights/"
+         class="nav-link <!--INSIGHTS_ACTIVE-->">
+        Insights
+      </a>
+    </nav>
+
+    <!-- RIGHT: Brand chip + Call to action -->
     <div class="nav-right">
-      <a class="btn btn-primary" href="consultation.html">
+      <div class="nav-chip">A Deoyin and Company LLC Brand</div>
+      <a class="btn btn-primary"
+         href="/consultation/"
+         style="padding: 6px 16px; font-size: 0.82rem;">
         Get Consultation
       </a>
     </div>
   </div>
-
-  <div class="hero">
-    <div>
-      <img src="img/deoyin-px-logo.png"
-           alt="Deoyin PX Logo"
-           style="height:120px; width:auto; margin-bottom:20px;">
-
-      <div class="hero-eyebrow">PK/PD · CDISC · HEOR · Automation · AI</div>
-      <h1 class="hero-title">
-        Modern <span class="hero-highlight">clinical analytics</span> for PK/PD, CDISC, HEOR, and reporting automation.
-      </h1>
-      <p class="hero-subtitle">
-        Deoyin PX helps pharma, biotech, and CRO teams move from raw clinical and PK data to validated, submission-ready outputs using R-based analytics, CDISC programming, ICER modeling, and intelligent automation.
-      </p>
-      <div class="hero-cta-row">
-        <a class="btn btn-primary" href="consultation.html">
-          Request a project consultation
-        </a>
-        <a class="btn btn-ghost" href="#services">
-          View services
-        </a>
-      </div>
-      <div class="hero-meta">
-        <span>• PK/PD analytics & reporting</span>
-        <span>• CDISC (ADaM, TLFs, P21)</span>
-        <span>• HEOR / ICER modeling</span>
-        <span>• Word/Excel & AI automation</span>
-      </div>
-    </div>
-
-    <div class="hero-right-card">
-      <div class="hero-right-title">CLINICAL ANALYTICS SNAPSHOT</div>
-      <div class="metric-row">
-        <div class="metric-label">Manual reporting timelines</div>
-        <div class="metric-value">1–3 weeks</div>
-      </div>
-      <div class="metric-row">
-        <div class="metric-label">With Deoyin PX automation</div>
-        <div class="metric-value">Hours → Minutes</div>
-      </div>
-      <div class="metric-row">
-        <div class="metric-label">Typical outputs</div>
-        <div class="metric-value">PK · TLF · ICER · Reports</div>
-      </div>
-      <div style="margin-top: 12px; font-size: 0.8rem; color: var(--text-muted);">
-        Example deliverables:
-      </div>
-      <div style="margin-top: 8px;">
-        <span class="sample-pill">NCA-ready PK tables</span>
-        <span class="sample-pill">ADaM & TLF packages</span>
-        <span class="sample-pill">Pinnacle 21 validation</span>
-        <span class="sample-pill">ICER & PSA dashboards</span>
-        <span class="sample-pill">Automated Word/Excel reports</span>
-      </div>
-    </div>
-  </div>
 </header>
-
 <main>
   <section class="section" id="services">
     <div class="section-inner">
