--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 
       <!-- Home -->
       <a href="/"
-         class="nav-link <!--HOME_ACTIVE-->">
+         class="nav-link nav-active <!--HOME_ACTIVE-->">
         Home
       </a>
 
