--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -181,8 +181,8 @@
         to see how Deoyin PX supports clinical, pharmacometrics, and market access teams.
       </p>
       <div class="btn-row">
-        <a href="index.html" class="btn btn-primary">Back to homepage</a>
-        <a href="insights.html" class="btn btn-ghost">Visit insights</a>
+        <a href="/" class="btn btn-primary">Back to homepage</a>
+        <a href="/insights/" class="btn btn-ghost">Visit insights</a>
       </div>
     </div>
   </main>
