--- a/consultation/index.html
+++ b/consultation/index.html
@@ -524,7 +524,7 @@
       <button type="button" class="btn btn-ghost" id="modal-close">
         Close
       </button>
-      <a href="thank-you.html" class="btn btn-primary">
+      <a href="/thank-you/" class="btn btn-primary">
         View next steps
       </a>
     </div>
