--- a/index.html
+++ b/index.html
@@ -465,6 +465,61 @@
     </div>
   </div>
 </header>
+  <div class="hero">
+    <div>
+      <img src="img/deoyin-px-logo.png"
+           alt="Deoyin PX Logo"
+           style="height:120px; width:auto; margin-bottom:20px;">
+
+      <div class="hero-eyebrow">PK/PD · CDISC · HEOR · Automation · AI</div>
+      <h1 class="hero-title">
+        Modern <span class="hero-highlight">clinical analytics</span> for PK/PD, CDISC, HEOR, and reporting automation.
+      </h1>
+      <p class="hero-subtitle">
+        Deoyin PX helps pharma, biotech, and CRO teams move from raw clinical and PK data to validated, submission-ready outputs using R-based analytics, CDISC programming, ICER modeling, and intelligent automation.
+      </p>
+      <div class="hero-cta-row">
+        <a class="btn btn-primary" href="consultation.html">
+          Request a project consultation
+        </a>
+        <a class="btn btn-ghost" href="#services">
+          View services
+        </a>
+      </div>
+      <div class="hero-meta">
+        <span>• PK/PD analytics & reporting</span>
+        <span>• CDISC (ADaM, TLFs, P21)</span>
+        <span>• HEOR / ICER modeling</span>
+        <span>• Word/Excel & AI automation</span>
+      </div>
+    </div>
+
+    <div class="hero-right-card">
+      <div class="hero-right-title">CLINICAL ANALYTICS SNAPSHOT</div>
+      <div class="metric-row">
+        <div class="metric-label">Manual reporting timelines</div>
+        <div class="metric-value">1–3 weeks</div>
+      </div>
+      <div class="metric-row">
+        <div class="metric-label">With Deoyin PX automation</div>
+        <div class="metric-value">Hours → Minutes</div>
+      </div>
+      <div class="metric-row">
+        <div class="metric-label">Typical outputs</div>
+        <div class="metric-value">PK · TLF · ICER · Reports</div>
+      </div>
+      <div style="margin-top: 12px; font-size: 0.8rem; color: var(--text-muted);">
+        Example deliverables:
+      </div>
+      <div style="margin-top: 8px;">
+        <span class="sample-pill">NCA-ready PK tables</span>
+        <span class="sample-pill">ADaM & TLF packages</span>
+        <span class="sample-pill">Pinnacle 21 validation</span>
+        <span class="sample-pill">ICER & PSA dashboards</span>
+        <span class="sample-pill">Automated Word/Excel reports</span>
+      </div>
+    </div>
+  </div>  
 <main>
   <section class="section" id="services">
     <div class="section-inner">
