--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
         Deoyin PX helps pharma, biotech, and CRO teams move from raw clinical and PK data to validated, submission-ready outputs using R-based analytics, CDISC programming, ICER modeling, and intelligent automation.
       </p>
       <div class="hero-cta-row">
-        <a class="btn btn-primary" href="consultation.html">
+        <a class="btn btn-primary" href="/consultation/">
           Request a project consultation
         </a>
         <a class="btn btn-ghost" href="#services">
