--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 .page {
   min-height: 100vh;  /* keep if you want footer pushed down a bit */
   /* remove flex layout to avoid scroll issues */
-  /* display: flex;
-     flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 }
 
     header {
