--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: auto;
-      min-height: 100%;
-      overflow-y: auto;   /* ensure the page can scroll vertically */
+     /* height: auto; */
+     /* min-height: 100%;
+      overflow-y: auto;   /* ensure the page can scroll vertically */*/
     }
 
     :root {
