--- a/insights/index.html
+++ b/insights/index.html
@@ -418,7 +418,7 @@
 
       <p style="margin-top:28px; font-size:0.88rem; color:var(--text-muted);">
         Want to turn one of these topics into a concrete workflow or internal tool?
-        <a href="consultation.html">Start with a short consultation.</a>
+        <a href="/consultation/">Start with a short consultation.</a>
       </p>
     </div>
   </section>
