--- a/about/index.html
+++ b/about/index.html
@@ -410,7 +410,7 @@
           <li>Co-design a roadmap that covers both immediate outputs and longer-term reusability.</li>
         </ul>
         <p style="margin-top:10px;">
-          <a class="btn btn-primary" href="consultation.html">Schedule a consultation</a>
+          <a class="btn btn-primary" href="/consultation/">Schedule a consultation</a>
         </p>
       </div>
     </div>
