--- a/services/index.html
+++ b/services/index.html
@@ -426,7 +426,7 @@
           <li>Where could automation meaningfully reduce future workload?</li>
         </ul>
         <p style="margin-top:10px;">
-          <a class="btn btn-primary" href="consultation.html">Discuss a project</a>
+          <a class="btn btn-primary" href="/consultation/">Discuss a project</a>
         </p>
       </div>
     </div>
